--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ ltximg
 load-compiled-scripts.c
 doc/*.html
 doc/*.pdf
-doc/scheme.md
+doc/scheme*.md
 *.res
 *.rc
 *.ico
@@ -17,3 +17,4 @@ TAGS
 *.tgz
 *.tar.gz
 *.log
+temp.scm
